<resources>
    <string name="app_name">Match It</string>
    <string name="hint_email">Email</string>
    <string name="hint_nric">NRIC</string>
    <string name="hint_address">Address</string>
    <string name="hint_postalcode">Postal Code</string>
    <string name="hint_password">Password</string>
    <string name="hint_contactnumber">Contact Number</string>
    <string name="hint_confirm">Confirm</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_nationality">Nationality</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_nextpage">NEXT PAGE</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registered! Login Now.</string>
    <string name="btn_cop">Coporate</string>
    <string name="btn_indi">Individual</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Full Name</string>
    <string name="languagespoken">Language Spoken And Written</string>
    <string name="title_activity_home_screen">MatchIt!</string>
    <string name="search_hint">Search</string>
    //Card View
    <string name="card_view_par">Participants : </string>
    <string name="card_view_timing">Timing : </string>
    <string name="btn_view_more">VIEW more</string>
    <string name="card_view_event_name">Event Name</string>
    //Settings
    <string name="account_name">Name</string>
    <string name="account_contactnumber">Contact Number</string>\
    <string name="account_address">Address</string>
    <string name="account_postalcode">Postal Code</string>
    <string name="account_password">Password</string>
    <string name="account_confirmpassword">Confirm Password</string>
    <string name="org_name">Organization Name</string>
    <string name="org_uen">UEN Number</string>
    <string name="update">Update</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string-array name="array_name">
        <item>Chinese</item>
        <item>Malay</item>
        <item>Indian</item>
        <item>Others</item>
    </string-array>

    <!-- Strings related to MainActivity-->
    <string name="scan_barcode_button">Scan barcode</string>
    <string name="no_barcode_captured">No barcode captured</string>
    <string name="barcode_error_format">"Error reading barcode: %1$s"</string>

    <!-- Strings related to barcode scanner -->
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
</resources>
