<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical">


    <TextView
        android:id="@+id/accountSettings"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:padding="20dip"
        android:text="ACCOUNT SETTINGS"
        android:textSize="22sp"
        android:textStyle="bold"
        android:drawableLeft="@drawable/settingimage"/>


    <View
        android:id="@+id/view"
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:layout_below="@+id/accountSettings"
        android:background="@color/input_login" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView"
                android:paddingBottom="5dp"
                android:paddingTop="300dp"
                android:text="Account Name: "
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                />

            <EditText
                android:id="@+id/accountName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@color/white"
                android:hint="@string/account_name"
                android:inputType="text"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="Contact Number: "
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/accountContactNumber"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@color/white"
                android:hint="@string/account_contactnumber"
                android:inputType="number"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="Organization Name: "
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/orgName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@color/white"
                android:hint="@string/org_name"
                android:inputType="text"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="UEN Number: "
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/orgUEN"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@color/white"
                android:hint="@string/org_uen"
                android:inputType="number"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />

            <Button
                android:id="@+id/btnUpdateProfile"
                android:background="@drawable/buttonshape"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:gravity="center"
                android:shadowColor="#575757"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:textColor="#FFFFFF"
                android:text="Update Profile"
                />

            <TextView
                android:id="@+id/textViewSpace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:paddingTop="5dp"
                />

            <View
                android:id="@+id/view2"
                android:layout_width="600dp"
                android:layout_height="2dp"
                android:layout_below="@+id/orgUEN"
                android:background="@color/colorBlack"

                />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="Old Password:"
                android:textColor="@color/colorBlack"
                android:paddingTop="20dp"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/oldPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="Old Password"
                android:inputType="textPassword"
                android:padding="5dp"
                android:singleLine="true"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingTop="20dp"
                android:text="Enter Password:"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/accountPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="@string/account_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="Please Enter Password Again: "
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/accountCfmPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@color/white"
                android:hint="@string/account_confirmpassword"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />

            <Button
                android:id="@+id/btnUpdate"
                android:background="@drawable/buttonshape"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:text="UPDATE PASSWORD"
                android:textColor="#FFFFFF"
                android:gravity="center"
                android:shadowColor="#575757"
                android:shadowDx="0"
                android:shadowDy="0"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>